# DiverseShow

./: .gitignore  README.md  build.gradle  build.gradle.kts  dynamic_build.gradle.kts  gradle.properties  include_projects.gradle.kts  settings.gradle  settings.gradle.kts
aarrun/aars/: api-weather-1.0.aar  base-1.0.aar  common-net-1.0.aar  common-util-1.0.aar  ds-home-1.0.aar  ds-weather-1.0.aar
aarrun/jsons/: api-weather-1.0.json  base-1.0.json  common-net-1.0.json  common-util-1.0.json  ds-home-1.0.json  ds-weather-1.0.json
android-skill/hotfix/: build.gradle.kts
android-skill/plugins/: build.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
buildSrc/: build.gradle.kts
components/api/api-weather/: build.gradle.kts
components/base/: build.gradle.kts
components/common-map/: build.gradle.kts
components/common-net/: build.gradle.kts
components/common-util/: build.gradle.kts
config/: debugApk.jks
features/ds-home/: build.gradle.kts
features/ds-weather/: build.gradle.kts
global/ds-app/: build.gradle.kts
global/lib-init/app-init-handler/: build.gradle
global/lib-init/app-init-processor/: build.gradle
global/lib-init/app-init-transform/: build.gradle  build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
openCV/: CMakeList.txt  build.gradle.kts
openCV/src/main/: AndroidManifest.xml  CMakeLists.txt
openCV/src/main/cpp/: native-lib.cpp
openCV/src/main/java/com/example/opencv/: OpenCVActivity.kt  OpenCVLauncher.kt
openCV/src/main/res/layout/: activity_open_cv.xml
(+219 files in other folders)
